--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 167.88.63.82, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-691.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 未知国家-2.19MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇦 加拿大-1.28MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 167.88.63.82, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-3.18MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇸🇬 新加坡-305.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-311.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-306.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-926.9KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 未知国家-2.87MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.68MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-459.7KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 167.88.61.175, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-691.0KB/s(Youtube:不良林)
-      - 未知国家-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-311.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-926.9KB/s(Youtube:不良林)
+      - 未知国家-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
