--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.68MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-195.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 0654731b-e414-4031-962d-be4c8e9579c8, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 6e1f3915-d1bb-4ded-81c7-32043e254592, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 167.88.61.175, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇫🇷 法国-376.7KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-16.46MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: usa.keai.shop, port: 4433, type: trojan, password: 550b88d7-b7e3-4b18-95dd-f1bd25551b52, sni: usa.keai.shop, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-306.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-16.46MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 保加利亚-413.8KB/s(Youtube:不良林), server: 213.183.63.218, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: 193.108.118.79, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.118.36, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 波兰-2.13MB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 波兰-1.57MB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-195.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-376.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
+      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 波兰-2.13MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
