--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: usa.keai.shop, port: 4433, type: trojan, password: 550b88d7-b7e3-4b18-95dd-f1bd25551b52, sni: usa.keai.shop, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-306.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-16.46MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 保加利亚-413.8KB/s(Youtube:不良林), server: 213.183.63.218, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇩🇪 德国-2.56MB/s(Youtube:不良林), server: 193.108.118.79, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-1.57MB/s(Youtube:不良林), server: 193.108.118.36, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.30MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 134.195.196.227, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: 193.108.118.79, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.118.36, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 波兰-2.13MB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.46MB/s(Youtube:不良林)
-      - 保加利亚-413.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-2.13MB/s(Youtube:不良林)
